Fix inline dropdown alignment

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -258,6 +258,7 @@
 }
 .ui.inline.dropdown .dropdown.icon {
   margin: @inlineIconMargin;
+  vertical-align: top;
 }
 .ui.inline.dropdown .text {
   font-weight: @inlineTextFontWeight;
@@ -265,7 +266,7 @@
 .ui.inline.dropdown .menu {
   cursor: auto;
   margin-top: @inlineMenuDistance;
-  border-radius: 0.325em;
+  border-radius: @inlineMenuBorderRadius;
 }
 
 
